fix: unresponsive treeSelect, scrollbar inputPanel

--- a/src/pages/workspace/workspace.module.css
+++ b/src/pages/workspace/workspace.module.css
@@ -23,4 +23,5 @@
 
 .leftReflexElement {
     min-width: 375px;
+    display: flex;
 }
